# nih-plug

./: Cargo.toml
nih_plug_iced/: Cargo.toml
nih_plug_iced/src/: assets.rs  editor.rs  lib.rs  widgets.rs  wrapper.rs
nih_plug_iced/src/widgets/: generic_ui.rs  param_slider.rs  peak_meter.rs
plugins/examples/gain_gui_iced/: Cargo.toml
plugins/examples/gain_gui_iced/src/: editor.rs
