[package]
name = "nih_plug_iced"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use iced GUIs with NIH-plug"

[features]
image = ["iced_baseview/image"]
svg = ["iced_baseview/svg"]
canvas = ["iced_baseview/canvas"]

[dependencies]
nih_plug = { path = "..", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

atomic_refcell = "0.1"
# baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
crossbeam = "0.8"
# This targets iced 0.10
iced_baseview = { git = "https://github.com/hekar-lab/iced_baseview.git", default-features = false, features = ["wgpu"]}
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
